Index page updated; media icon added; universal css updated

--- a/index.html
+++ b/index.html
@@ -327,51 +327,51 @@
                         <!-- Single Today Post -->
                         <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
                             <div class="todays-post-thumb">
-                                <img src="img/blog-img/2.jpg" alt="">
+                                <img src="politics/img/3_3.jpg" alt="">
                             </div>
                             <div class="todays-post-content">
                                 <!-- Post Tag -->
                                 <div class="gazette-post-tag">
-                                    <a href="#">News</a>
+                                    <a href="politics/category.html">Politics</a>
                                 </div>
-                                <h3><a href="#" class="font-pt mb-2">$250-million mansion is most expensive</a></h3>
-                                <span class="gazette-post-date mb-2">March 29, 2016</span>
-                                <a href="#" class="post-total-comments">3 Comments</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend. Nullam viverra tincidunt dolor, at pulvinar dui. Nullam at risus ut ipsum viverra posuere.</p>
+                                <h3><a href="politics/the-us-has-reached-a-critical-juncture-in-history.html" class="font-pt mb-2">美国走到了历史的风陵渡口</a></h3>
+                                <span class="gazette-post-date mb-2">January 7, 2021</span>
+                                <a class="post-total-comments">作者：红炉主人</a>
+                                <p>今天华盛顿发生的事态是美国历史上史无前例的，从来没有人用这种暴力和决绝的方式强行打断世界上最大的宪政民主国家的选举进程（参议院最终确认选举人投票结果）。毋庸置疑，美国的民主受到了巨大的挑战，华盛顿邮报的评论表示川普应该对今天的国会袭击事件负责并引咎下台。</p>
                             </div>
                         </div>
 
                         <!-- Single Today Post -->
                         <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
                             <div class="todays-post-thumb">
-                                <img src="img/blog-img/3.jpg" alt="">
+                                <img src="business/img/image6.png" alt="">
                             </div>
                             <div class="todays-post-content">
                                 <!-- Post Tag -->
                                 <div class="gazette-post-tag">
-                                    <a href="#">Life</a>
+                                    <a href="business/category.html">Business</a>
                                 </div>
-                                <h3><a href="#" class="font-pt mb-2">Homeless man steals $350,000 </a></h3>
-                                <p class="gazette-post-date mb-2">March 29, 2016</p>
-                                <a href="#" class="post-total-comments">3 Comments</a>
-                                <p>Aliquam quis convallis enim. Nunc pulvinar molestie sem id blandit. Nunc venenatis interdum mollis. Aliquam finibus nulla quam, a iaculis justo finibus non. Suspendisse in fermentum nunc.</p>
+                                <h3><a href="business/bitcoin.html" class="font-pt mb-2">有点像朋友圈？浅谈比特币交易系统的设计</a></h3>
+                                <p class="gazette-post-date mb-2">January 25, 2021</p>
+                                <a class="post-total-comments">作者：待添加</a>
+                                <p>刚刚过去的2020年比特币价格暴涨，投机气氛甚浓。笔者近日试图去理解与思考比特币交易系统的设计思路，其价值来源于哪里，长期而言比特币的前景如何等问题，并将自己近日所了解到的东西记录下来，写成了两篇文章。本文是第一篇，试图用最通俗的语言解释比特币交易系统是如何运转的。</p>
                             </div>
                         </div>
                         
                         <!-- Single Today Post -->
                         <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
                             <div class="todays-post-thumb">
-                                <img src="img/blog-img/3.jpg" alt="">
+                                <img src="tech/img/image9.png" alt="">
                             </div>
                             <div class="todays-post-content">
                                 <!-- Post Tag -->
                                 <div class="gazette-post-tag">
-                                    <a href="#">Life</a>
+                                    <a href="tech/category.html">Tech</a>
                                 </div>
-                                <h3><a href="#" class="font-pt mb-2">Homeless man steals $350,000 </a></h3>
-                                <p class="gazette-post-date mb-2">March 29, 2016</p>
-                                <a href="#" class="post-total-comments">3 Comments</a>
-                                <p>Aliquam quis convallis enim. Nunc pulvinar molestie sem id blandit. Nunc venenatis interdum mollis. Aliquam finibus nulla quam, a iaculis justo finibus non. Suspendisse in fermentum nunc.</p>
+                                <h3><a href="tech/covid-vaccine-comparison.html" class="font-pt mb-2">新冠疫苗之比较 </a></h3>
+                                <p class="gazette-post-date mb-2">January 1, 2021</p>
+                                <a class="post-total-comments">作者：待添加</a>
+                                <p>mRNA疫苗和常规灭活疫苗有什么区别？这三种疫苗的安全性如何？会有什么副作用？有效率又如何？有怎么样的接种方式？本文将会针对这些问题全面分析和比较这三种疫苗目前的公开数据，希望能给读者们一点启迪，让读者们明白各种疫苗的优劣，从而做出稳妥的选择。</p>
                             </div>
                         </div>
 
@@ -383,65 +383,94 @@
                         <!-- Breaking News Widget -->
                         <div class="breaking-news-widget">
                             <div class="widget-title">
-                                <h5>近期更新 Recent Updates</h5>
+                                <h5>近期新闻 Recent News</h5>
                             </div>
+
                             <!-- Single Breaking News Widget -->
                             <div class="single-breaking-news-widget">
-                                <img src="img/blog-img/bn-1.jpg" alt="">
+                                <img src="recreation/img/Wang_Shuang.jpg" alt="">
                                 <div class="breakingnews-title">
-                                    <p>breaking news</p>
+                                    <p>Recreation</p>
                                 </div>
-                                <div class="breaking-news-heading gradient-background-overlay">
-                                    <h5 class="font-pt" >China leads new global skyscraper record</h5>
-                                </div>
+                                <a href="recreation/chinese-women-football.html" div class="breaking-news-heading gradient-background-overlay">
+                                    <h5 class="font-pt" >触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</h5>
+                                </a>
                             </div>
+                            
                             <!-- Single Breaking News Widget -->
                             <div class="single-breaking-news-widget">
-                                <img src="img/blog-img/bn-2.jpg" alt="">
+                                <img src="society/img/JapanProtest.png" alt="">
                                 <div class="breakingnews-title">
-                                    <p>breaking news</p>
+                                    <p>Society</p>
                                 </div>
-                                <div class="breaking-news-heading gradient-background-overlay">
-                                    <h5 class="font-pt">Can a zebra crossing change its stripes?</h5>
-                                </div>
+                                <a href="society/tokyo-olympics.html" div class="breaking-news-heading gradient-background-overlay">
+                                    <h5 class="font-pt" >东京奥运，“办还是不办？” 麦迪讯带你了解奥运会背后的政治考量</h5>
+                                </a>
                             </div>
+
+                            <!-- Single Breaking News Widget -->
+                            <div class="single-breaking-news-widget">
+                                <img src="politics/img/2_1.jpg" alt="">
+                                <div class="breakingnews-title">
+                                    <p>Politics</p>
+                                </div>
+                                <a href="politics/the-eighteenth-brumaire-of-donald-trump-2.html" div class="breaking-news-heading gradient-background-overlay">
+                                    <h5 class="font-pt" >唐纳德·特朗普的雾月一十八日（下）</h5>
+                                </a>
+                            </div>
+
                         </div>
 
                         <!-- Don't Miss Widget -->
                         <div class="donnot-miss-widget">
                             <div class="widget-title">
-                                <h5>本地动态 Local News</h5>
+                                <h5>新闻评论 Commentary</h5>
                             </div>
+
                             <!-- Single Don't Miss Post -->
                             <div class="single-dont-miss-post d-flex mb-30">
                                 <div class="dont-miss-post-thumb">
-                                    <img src="img/blog-img/dm-1.jpg" alt="">
+                                    <img src="commentary/img/41_Zhang_Xi_Feng_In_Grade_12.jpg" alt="">
                                 </div>
                                 <div class="dont-miss-post-content">
-                                    <a href="#" class="font-pt">EU council reunites</a>
-                                    <span>Nov 29, 2017</span>
+                                    <a href="commentary/stars-will-shine-above-the-valley-floor.html" class="font-pt">就算是“土猪”，也可以仰望星空</a>
+                                    <span>Jun 9, 2021</span>
                                 </div>
                             </div>
+
                             <!-- Single Don't Miss Post -->
                             <div class="single-dont-miss-post d-flex mb-30">
                                 <div class="dont-miss-post-thumb">
-                                    <img src="img/blog-img/dm-2.jpg" alt="">
+                                    <img src="commentary/img/45_Modern_Times.png" alt="">
                                 </div>
                                 <div class="dont-miss-post-content">
-                                    <a href="#" class="font-pt">A new way to travel the world</a>
-                                    <span>March 29, 2016</span>
+                                    <a href="commentary/see-through-pigs-digging-cabbages.html" class="font-pt">从“土猪拱白菜”看什么是阶级</a>
+                                    <span>Jul 5, 2021</span>
                                 </div>
                             </div>
+
                             <!-- Single Don't Miss Post -->
                             <div class="single-dont-miss-post d-flex mb-30">
                                 <div class="dont-miss-post-thumb">
-                                    <img src="img/blog-img/dm-3.jpg" alt="">
+                                    <img src="commentary/img/LyingFlat_Stakhanov.png" alt="">
                                 </div>
                                 <div class="dont-miss-post-content">
-                                    <a href="#" class="font-pt">Why choose a bank?</a>
-                                    <span>March 29, 2016</span>
+                                    <a href="commentary/lying-flat.html" class="font-pt">年轻人选择“躺平”有罪否？</a>
+                                    <span>May 24, 2021</span>
                                 </div>
                             </div>
+
+                            <!-- Single Don't Miss Post -->
+                            <div class="single-dont-miss-post d-flex mb-30">
+                                <div class="dont-miss-post-thumb">
+                                    <img src="commentary/img/Gansu_Cross-Country_Marathon_Scene.png" alt="">
+                                </div>
+                                <div class="dont-miss-post-content">
+                                    <a href="commentary/gansu-cross-country-marathon.html" class="font-pt">是天灾，更是人祸——甘肃越野马拉松的惨痛教训</a>
+                                    <span>May 24, 2021</span>
+                                </div>
+                            </div>
+
                         </div>                        
                     </div>
                 </div>
