--- a/platform.html
+++ b/platform.html
@@ -314,36 +314,36 @@
                     <div class="row">
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\core-img\logo.jpg" alt="">
+                                <img src="img\media-img\wechat.png" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">微信公众号</h4>
                                     <div
                                         class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                        <h5 class="font-pt mb-0">微信公众号</h5>
+                                        <h5 class="font-pt mb-0">微信号：Madison_news</h5>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\core-img\logo.jpg" alt="">
+                                <img src="img\media-img\bilibili.png" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">哔哩哔哩</h4>
                                     <div
                                         class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                        <h5 class="font-pt mb-0">哔哩哔哩</h5>
+                                        <h5 class="font-pt mb-0">会员名：麦迪讯</h5>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\core-img\logo.jpg" alt="">
+                                <img src="img\media-img\ximalaya.png" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">喜马拉雅</h4>
                                     <div
                                         class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                        <h5 class="font-pt mb-0">喜马拉雅</h5>
+                                        <h5 class="font-pt mb-0">主播：MadNews麦迪讯</h5>
                                     </div>
                                 </div>
                             </div>
@@ -356,24 +356,24 @@
                     <div class="row">
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\core-img\logo.jpg" alt="">
+                                <img src="img\media-img\facebook.png" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">Facebook</h4>
                                     <div
                                         class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                        <h5 class="font-pt mb-0">Facebook</h5>
+                                        <h5 class="font-pt mb-0">小组名: MADNEWS麦迪讯</h5>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\core-img\logo.jpg" alt="">
+                                <img src="img\media-img\youtube.png" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">YouTube</h4>
                                     <div
                                         class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                        <h5 class="font-pt mb-0">YouTube</h5>
+                                        <h5 class="font-pt mb-0">账号：Madnews麦迪讯</h5>
                                     </div>
                                 </div>
                             </div>
