--- a/politics/meta gala.html
+++ b/politics/meta gala.html
@@ -267,7 +267,7 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/5_1.jpg" alt="" height="200" width="750"/>
-                                <p>AOC的“向富人征税”裙子</p>
+                                <p style="color:grey;">AOC的“向富人征税”裙子</p>
                             </center>
                         </div>
                     </div>
@@ -277,7 +277,6 @@
                             <p><b>AOC:革命家，政客，还是明星</b></p>
                             <p>2018年的新晋众议员AOC资历不显，但影响力却远超一般议员。她推特上拥有一千两百万粉丝（众议员第一），只有特朗普，奥巴马等寥寥数人能比。同时，年仅31岁的她能够熟练使用各类社交媒体，在instagram，tiktok （美国抖音）上也极受年轻人欢迎。2020年十月，AOC在twitch平台一次直播玩游戏，超四十万人在线观看，排在twitch的历史前二十中。2021年2月，德州雪灾，AOC一周内就为德州受灾群众募集四百万美元的赈灾资金。哪怕不看她的政治权力，她也是当之无愧的进步派意见领袖。</p>
                             <p>进步派在媒体聚焦的met gala上宣传向富人征税看似无可指摘，但是，对于AOC这样一位“顶流”的活动家而言，她有更重要和效果更好的宣传方式。用经济学词汇说，参加met gala的机会成本太高。<font size=2>[1]</font> 同一天，奢华的晚宴外，一群“黑人的命也是命”和其他民权组织的活动家们在抗议纽约警察的高额经费和暴力行径。随后，他们就被全副武装的纽约警察用暴力手段赶走，有人被打得头破血流，数十人被逮捕。AOC更应该和这群抗议者站在一起，保护其他的活动家，宣传她同样重视的警察改革；亦或是穿着同一条裙子，站在met gala外抗议里面的富人，以真正决绝的方式表达自己的政治主张。</p>
-                            <p><font size=2>[1] 机会成本是指为进行活动而放弃另一项活动的机会。就如你晚上去看电影，成本是电影票钱，但是机会成本是你没办法学习了。</font></p>
                         </div>
                     </div>
 
@@ -286,18 +285,15 @@
                             <center>
                                 <img src="img/5_2.jpg" alt="" height="200" width="750"/>
                                 <img src="img/5_3.jpg" alt="" height="200" width="750"/>
-                                <p>在met gala外，抗议者被警察带走</p>
+                                <p style="color:grey;">在met gala外，抗议者被警察带走</p>
                             </center>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                        <p>退一步说，向富人征税这个政策已经深入人心，不需要AOC来增强民众的意识（raise awareness）。据Reuter报道，64%的民众支持或强烈支持向富人收更高的税<font size=2>[1]</font>，77%的民主党和53%的共和党都认为富人纳税太少，这在两级分化的美国已经算是大受欢迎了，没必要继续宣传了。民主党绝大多数政客（并非只有进步派）在竞选时都会提出该政策，结果拜登总统和民主党两院上任大半年了，在立法上仍无所作为。AOC不点出民主党的问题，单纯地向公众呼吁，其本质上是消极的。<font size=2>[2]</font></p>
-                        <p>最后，AOC宣称自己是一位革命家（revolutionary）,将自己的胜选视作一场社会运动（movement）的开端<font size=2>[3]</font>。她确实掀起过风浪，惹怒过高高在上的建制派：2018年和环保组织日出运动（Sunrise Movement）在议长佩洛西的办公室外抗议；2019年到美墨边境反对对非法移民的暴力执法和拘捕。</p>
-                        <p><font size=2>[1]https://www.reuters.com/article/us-usa-election-inequality-poll/majority-of-americans-favor-wealth-tax-on-very-rich-reuters-ipsos-poll-idUSKBN1Z9141</font></p>
-                        <p><font size=2>[2] 关于AOC在国会中的软弱表现，笔者后续会有相关文章介绍</font></p>
-                        <p><font size=2>[3]https://awpc.cattcenter.iastate.edu/2019/03/11/general-election-victory-speech-nov-6-2018/</font></p>
+                        <p>退一步说，向富人征税这个政策已经深入人心，不需要AOC来增强民众的意识（raise awareness）。据Reuter报道，64%的民众支持或强烈支持向富人收更高的税<font size=2>[2]</font>，77%的民主党和53%的共和党都认为富人纳税太少，这在两级分化的美国已经算是大受欢迎了，没必要继续宣传了。民主党绝大多数政客（并非只有进步派）在竞选时都会提出该政策，结果拜登总统和民主党两院上任大半年了，在立法上仍无所作为。AOC不点出民主党的问题，单纯地向公众呼吁，其本质上是消极的。<font size=2>[3]</font></p>
+                        <p>最后，AOC宣称自己是一位革命家（revolutionary）,将自己的胜选视作一场社会运动（movement）的开端<font size=2>[4]</font>。她确实掀起过风浪，惹怒过高高在上的建制派：2018年和环保组织日出运动（Sunrise Movement）在议长佩洛西的办公室外抗议；2019年到美墨边境反对对非法移民的暴力执法和拘捕。</p>
                         </div>
                     </div>
 
@@ -305,7 +301,7 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/5_4.jpg" alt="" height="200" width="750"/>
-                                <p>AOC2018年在佩洛西的办公室门口抗议，呼吁政府创造更多绿色能源相关工作</p>
+                                <p style="color:grey;">AOC2018年在佩洛西的办公室门口抗议，呼吁政府创造更多绿色能源相关工作</p>
                             </center>
                         </div>
                     </div>
@@ -320,14 +316,14 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/5_5.jpg" alt="" height="200" width="200"/>
-                                <p>哈莉特·塔布曼是著名废奴主义者，是帮助奴隶逃离南方的地下铁路中最活跃的向导</p>
+                                <p style="color:grey;">哈莉特·塔布曼是著名废奴主义者，是帮助奴隶逃离南方的地下铁路中最活跃的向导</p>
                                 <img src="img/5_6.jpg" alt="" height="200" width="200"/>
-                                <p>玛丽·伊丽莎白·丽思是镀金时代代表农民利益的人民党领袖</p>
+                                <p style="color:grey;">玛丽·伊丽莎白·丽思是镀金时代代表农民利益的人民党领袖</p>
                                 <img src="img/5_7.jpg" alt="" height="200" width="200"/>
-                                <p>玛丽·哈里丝·琼斯则是工会运动和美国社会党的早期参与者</p>
+                                <p style="color:grey;">玛丽·哈里丝·琼斯则是工会运动和美国社会党的早期参与者</p>
                                 <img src="img/5_8.jpg" alt="" height="200" width="200"/>
-                                <p>艾玛·戈德曼是十九世纪初美国无政府主义者、反战主义者、女权主义者</p>
-                                <p>以上四位女性革命家都被当时的统治者恨之入骨</p>
+                                <p style="color:grey;">艾玛·戈德曼是十九世纪初美国无政府主义者、反战主义者、女权主义者</p>
+                                <p style="color:grey;">以上四位女性革命家都被当时的统治者恨之入骨</p>
                             </center>
                         </div>
                     </div>
@@ -337,12 +333,9 @@
                         <p><b>虚浮浅薄的言行</b></p>
                         <p>可能有人会认为笔者对AOC的要求太过于严格：确实AOC参加met gala而错过了场外的游行,且她在met gala上的举动也不见得有什么宣传效果,但是她毕竟为进步派做出了贡献,这件事总体来说对AOC的政治形象还是有积极作用的。</p>
                         <p>如果AOC只是参加一场寻常的社交活动，像她去年十月边打游戏边谈政治的那场直播，并不会招致大量的批评。但是，AOC在参加met gala前后的言论和行为处处自相矛盾，令人大失所望。</p>
-                        <p><b>首先</b>，AOC本人的廉洁形象受到了挑战。参加met gala极其昂贵，一个人就要三万五千美元。AOC自称受到了大都会博物馆对纽约政治人物的邀请而来，并没有花一分钱。但是，一分钱没花等同于没有代价了吗？met gala的主持者Met's Costume Institute 是没有政府拨款的，所以一定有人为AOC买单，而met gala的邀请也算不小的人情了。<font size=2>[1]</font>谁付的钱和谁发出的邀请至今也没有公开，所以我们也无从得知AOC欠了哪位有钱人的人情。</p>
+                        <p><b>首先</b>，AOC本人的廉洁形象受到了挑战。参加met gala极其昂贵，一个人就要三万五千美元。AOC自称受到了大都会博物馆对纽约政治人物的邀请而来，并没有花一分钱。但是，一分钱没花等同于没有代价了吗？met gala的主持者Met's Costume Institute 是没有政府拨款的，所以一定有人为AOC买单，而met gala的邀请也算不小的人情了。<font size=2>[5]</font>谁付的钱和谁发出的邀请至今也没有公开，所以我们也无从得知AOC欠了哪位有钱人的人情。</p>
                         <p>作为进步派，AOC在竞选时坚持拒绝企业献金，相比于美国国会绝大部分议员都要清白得多。但是，如果按照国会的伦理规范，每个议员每年只能从一个来源接受价值一百美元的礼物，AOC算不算违规呢？哪怕不违规,一直宣称自己不受金钱影响的AOC还能理直气壮地在下次选举中重申自己的清白吗？</p>
-                        <p><b>其次</b>，met gala无疑是一个精英云集的名利场，但是AOC却不认为她参加如此精英主义的活动有何不妥。回答媒体时，她宣称自己是带着工薪阶级经历（working class experience）“闯入”met gala的。身着华服，享受众人拥戴的AOC可能自己也没有意识到其中的讽刺。当她走过红毯，向着无数镜头和尖叫的粉丝微笑时，一位带着口罩，穿着黑衣的服务员在后面拖着她的裙摆。<font size=2>[2]</font>met gala确实有着真正的工薪阶层，只是不是AOC本人而已。</p>
-                        <p><font size=2>[1]https://www.dailymail.co.uk/news/article-9990919/Vogue-didnt-pay-AOC-attend-Met-Gala-despite-claim-invited-official.html</font></p>
-                        <p><font size=2>[2]https://thepostmillennial.com/watch-new-footage-shows-aoc-being-waited-on-by-masked-servant-class-before-met-gala</font></p>
-                        <p><font size=2>推荐观看AOC走红毯的视频片段</font></p>
+                        <p><b>其次</b>，met gala无疑是一个精英云集的名利场，但是AOC却不认为她参加如此精英主义的活动有何不妥。回答媒体时，她宣称自己是带着工薪阶级经历（working class experience）“闯入”met gala的。身着华服，享受众人拥戴的AOC可能自己也没有意识到其中的讽刺。当她走过红毯，向着无数镜头和尖叫的粉丝微笑时，一位带着口罩，穿着黑衣的服务员在后面拖着她的裙摆。<font size=2>[6]</font>met gala确实有着真正的工薪阶层，只是不是AOC本人而已。</p>
                         </div>
                     </div>
 
@@ -350,7 +343,7 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/5_9.jpg" alt="" height="200" width="750"/>
-                                <p>请指出图中哪些人是工薪阶级</p>
+                                <p style="color:grey;">请指出图中哪些人是工薪阶级</p>
                             </center>
                         </div>
                     </div>
@@ -366,18 +359,15 @@
                             <center>
                                 <img src="img/5_10.jpg" alt="" height="200" width="750"/>
                                 <img src="img/5_11.jpg" alt="" height="200" width="750"/>
-                                <p>“打倒男权社会”，“女性平权法案”，但是met gala现场最大的隔阂不是来自男女，而是来自阶级</p>
+                                <p style="color:grey;">“打倒男权社会”，“女性平权法案”，但是met gala现场最大的隔阂不是来自男女，而是来自阶级</p>
                             </center>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                        <p>说回工薪阶级经历，AOC的言论体现出了当代美国身份政治的肤浅，所谓将“工薪阶级经验”带来了met gala无非就是说AOC这个曾经的工薪阶层人士参加了这场晚宴。明明是别人邀请你来的，却一定要说是自己凭借着努力闯进来（kick open the doors of Met）。想参加精英聚会，享受走红毯，但说无妨，穿一件向富人征税的裙子做做秀也无不妥。然而，非要牵强附会说是自己来履行监督和支持纽约公共文化建设的义务（to our responsibilities in overseeing and supporting the city’s cultural institutions for the public ）<font size=2>[1]</font>，分享“工薪阶级经验”，推动进步派革命，实在过于自恋。</p>
-                        <p>和AOC一起“闯入”met gala的是“向富人征税”长裙的设计师，AOC介绍她是黑人移民女性，从布鲁克林的跳蚤市场一路奋斗直到在美国时装设计协会上得奖，简直是打破各类天花板的完美人设。事实上，这位设计师是从多伦多移民到纽约（中产出身），男友是亿万富翁，自己的奢侈品公司欠税同时还有虐待员工的传闻。<font size=2>[2]</font>AOC出于自己的宣传目的，并不高明地掩盖了这些信息。笔者并非否认设计师的创意和成就，只是她的成功没有AOC口中的重大意义，不值得如此的自我标榜。</p>
-                        <p><font size=2>[1]https://twitter.com/AOC/status/1437638740009160705</font></p>
-                        <p><font size=2>[2]https://nypost.com/2021/09/18/aocs-tax-the-rich-dress-designer-aurora-james-is-a-tax-deadbeat/</font></p>
-                        <p><font size=2>纽约邮报政治立场偏右，但是本次报道完全属实。</font></p>
+                        <p>说回工薪阶级经历，AOC的言论体现出了当代美国身份政治的肤浅，所谓将“工薪阶级经验”带来了met gala无非就是说AOC这个曾经的工薪阶层人士参加了这场晚宴。明明是别人邀请你来的，却一定要说是自己凭借着努力闯进来（kick open the doors of Met）。想参加精英聚会，享受走红毯，但说无妨，穿一件向富人征税的裙子做做秀也无不妥。然而，非要牵强附会说是自己来履行监督和支持纽约公共文化建设的义务（to our responsibilities in overseeing and supporting the city’s cultural institutions for the public ）<font size=2>[7]</font>，分享“工薪阶级经验”，推动进步派革命，实在过于自恋。</p>
+                        <p>和AOC一起“闯入”met gala的是“向富人征税”长裙的设计师，AOC介绍她是黑人移民女性，从布鲁克林的跳蚤市场一路奋斗直到在美国时装设计协会上得奖，简直是打破各类天花板的完美人设。事实上，这位设计师是从多伦多移民到纽约（中产出身），男友是亿万富翁，自己的奢侈品公司欠税同时还有虐待员工的传闻。<font size=2>[8]</font>AOC出于自己的宣传目的，并不高明地掩盖了这些信息。笔者并非否认设计师的创意和成就，只是她的成功没有AOC口中的重大意义，不值得如此的自我标榜。</p>
                         </div>
                     </div>
 
@@ -391,7 +381,7 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/5_12.jpg" alt="" height="200" width="750"/>
-                                <p>AOC参加met gala的宣言</p>
+                                <p style="color:grey;">AOC参加met gala的宣言</p>
                             </center>
                         </div>
                     </div>
@@ -400,10 +390,7 @@
                         <div class="single-post-text">
                         <p> 不管是工薪阶级的AOC，还是她的黑人移民女性设计师，如今的身份政治只聚焦于精英人士，却忽视了还在挣扎的大多数人。70年代的美国女权运动家如Andrea Dworkin就直言女权运动的目标不是让几个女性成为CEO，而是要解放父权体制下的所有女性，而五十年后的运动家如AOC却不明白这个道理，将自己和极个别人的成功视作整个群体的集体胜利。</p>
                         <p>关于AOC和身份政治的更深刻分析，本社的赤色的黎明同学写了一篇介绍景观社会的短文，用哲学家德波的理论分析了AOC的met gala表演，强烈推荐。</p>
-                        <p>AOC的肤浅和自恋让我想起了奥巴马。打着希望和变革旗帜入主白宫，离任后第一场演讲就去华尔街吸金四十万。<font size=2>[1]</font>疫情期间在自家千万美元的豪宅中过六十大寿，大宴宾客，极尽奢华之能事。和met gala一样，超过两百位已接种疫苗的仆人都被强制要求带口罩，而各路嘉宾们却不戴口罩，在室内纵情狂舞，公众人物的责任心早已抛之脑后。<font size=2>[2]</font>奥巴马总统中心，树立在芝加哥中心，耗资八亿美元，如帝王陵寝一般，昭示着他的傲慢。<font size=2>[3]</font>他有何德何能，有何伟大成就，又是通过出卖自己哪些原则才获得了如此庞大赞助的呢？</p>
-                        <p><font size=2>[1]https://www.bbc.com/news/world-us-canada-39710529</font></p>
-                        <p><font size=2>[2]https://nypost.com/2021/08/09/private-jets-and-no-masks-how-obamas-party-was-height-of-elite-hypocrisy/</font></p>
-                        <p><font size=2>[3]https://www.nbcchicago.com/news/documents-detail-new-cost-for-obama-presidential-center/2595781/</font></p>
+                        <p>AOC的肤浅和自恋让我想起了奥巴马。打着希望和变革旗帜入主白宫，离任后第一场演讲就去华尔街吸金四十万。<font size=2>[9]</font>疫情期间在自家千万美元的豪宅中过六十大寿，大宴宾客，极尽奢华之能事。和met gala一样，超过两百位已接种疫苗的仆人都被强制要求带口罩，而各路嘉宾们却不戴口罩，在室内纵情狂舞，公众人物的责任心早已抛之脑后。<font size=2>[10]</font>奥巴马总统中心，树立在芝加哥中心，耗资八亿美元，如帝王陵寝一般，昭示着他的傲慢。<font size=2>[11]</font>他有何德何能，有何伟大成就，又是通过出卖自己哪些原则才获得了如此庞大赞助的呢？</p>
                         </div>
                     </div>
 
@@ -411,7 +398,7 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/5_13.jpg" alt="" height="200" width="750"/>
-                                <p>奥巴马总统中心 </p>
+                                <p style="color:grey;">奥巴马总统中心 </p>
                             </center>
                         </div>
                     </div>
@@ -426,8 +413,20 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/5_14.jpg" alt="" height="200" width="750"/>
-                                <p>Carolyn Maloney的奇装异服，她的今天会不会是AOC的明天？</p>
+                                <p style="color:grey;">Carolyn Maloney的奇装异服，她的今天会不会是AOC的明天？</p>
                             </center>
+                        <p><b>参考</b></p>
+                        <p><font size=2>[1] 机会成本是指为进行活动而放弃另一项活动的机会。就如你晚上去看电影，成本是电影票钱，但是机会成本是你没办法学习了。</font></p> 
+                        <p><font size=2>[2]https://www.reuters.com/article/us-usa-election-inequality-poll/majority-of-americans-favor-wealth-tax-on-very-rich-reuters-ipsos-poll-idUSKBN1Z9141</font></p>
+                        <p><font size=2>[3] 关于AOC在国会中的软弱表现，笔者后续会有相关文章介绍</font></p>
+                        <p><font size=2>[4]https://awpc.cattcenter.iastate.edu/2019/03/11/general-election-victory-speech-nov-6-2018/</font></p>
+                        <p><font size=2>[5]https://www.dailymail.co.uk/news/article-9990919/Vogue-didnt-pay-AOC-attend-Met-Gala-despite-claim-invited-official.html</font></p>
+                        <p><font size=2>[6]https://thepostmillennial.com/watch-new-footage-shows-aoc-being-waited-on-by-masked-servant-class-before-met-gala 推荐观看AOC走红毯的视频片段</font></p>
+                        <p><font size=2>[7]https://twitter.com/AOC/status/1437638740009160705</font></p>
+                        <p><font size=2>[8]https://nypost.com/2021/09/18/aocs-tax-the-rich-dress-designer-aurora-james-is-a-tax-deadbeat/ 纽约邮报政治立场偏右，但是本次报道完全属实。</font></p>
+                        <p><font size=2>[9]https://www.bbc.com/news/world-us-canada-39710529</font></p>
+                        <p><font size=2>[10]https://nypost.com/2021/08/09/private-jets-and-no-masks-how-obamas-party-was-height-of-elite-hypocrisy/</font></p>
+                        <p><font size=2>[11]https://www.nbcchicago.com/news/documents-detail-new-cost-for-obama-presidential-center/2595781/</font></p>
                         </div>
                     </div>
 
