--- a/politics/progress.html
+++ b/politics/progress.html
@@ -282,7 +282,7 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/4_2.jpg" alt="" height="200" width="750"/>
-                                <p>近年来社交媒体上流行的“炫富摔”，新华网</p>
+                                <p style="color:grey;">近年来社交媒体上流行的“炫富摔”，新华网</p>
                             </center>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/4_3.jpg" alt="" height="200" width="750"/>
-                                <p>AOC在高档晚宴上的穿搭， USAToday</p>
+                                <p style="color:grey;">AOC在高档晚宴上的穿搭， USAToday</p>
                             </center>
                         </div>
                     </div>
@@ -312,7 +312,7 @@
                         <div class="single-post-thumb">
                             <center>
                                 <img src="img/4_4.jpg" alt="" height="200" width="750"/>
-                                <p>佩洛西在BLM运动期间下跪.buzzfeednews.com</p>
+                                <p style="color:grey;">佩洛西在BLM运动期间下跪.buzzfeednews.com</p>
                             </center>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                                 <img src="img/4_5.jpg" alt="" height="200" width="750"/>
                                 <img src="img/4_6.jpg" alt="" height="200" width="750"/>
                                 <img src="img/4_7.jpg" alt="" height="200" width="750"/>
-                                <p>以上图片来源：jewishinsider.com</p>
+                                <p style="color:grey;">以上图片来源：jewishinsider.com</p>
                             </center>
                         </div>
                     </div>
